--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/design/Introductiondesign.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/design/Introductiondesign.tex
@@ -1,1 +1,1 @@
-In the design chapter the specification requirements, partner analysis, solution suggestions, program planning, sketches before programming, GUI description, and the packing algorithm are described and why those features are needed or wanted in the program. There are also a section detailing some features that would be nice to have if there is enough time to implement them in the program.
+In the design chapter the specification requirements, partner analysis, solution suggestions, program planning, sketches before programming, GUI description, and the packing algorithm are described and why those features are needed or wanted in the program. There is also a section detailing some features which would be nice to have if there is enough time to implement them in the program.
