--- a/LaTeX/Rapport - NIX PILLE/indhold/design/sketchdescription.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/design/sketchdescription.tex
@@ -1,4 +1,4 @@
-\section{Sketches before programming of GUI}
+\section{Sketches Before Programming of GUI}
 \label{sec:sketches}
 %Til retter: Vær OBS på første afsnit, er skrevet til
 This section will describe the first thoughts of the Graphical User Interface (GUI). This is not how the final GUI is designed, but the first sketches. The final GUI was improved by tests and own experience. The final GUI can be seen in Section \ref{sec:GUI}.
@@ -8,7 +8,7 @@ It shows some text boxes where the user must type the dimensions of the suitcase
 \figur{0.9}{Skitse1.png}{Initial sketch of the program}{fig:skitse1}
 
 It has been discussed whether there should be a 3D image or a 2D image of the suitcase, where the user can see where the items are placed. It was decided that the best way to show the packing, is by a rotative 3D image, if possible.
-The point with the boxes was that it was there the measurements of a specific item would be shown.
+The point with the boxes was that the measurements of a specific item would be shown.
 A similar form would be made for items as well.
 
 \figur{0.9}{Skitse2.png}{Second sketch, now with added control buttons}{fig:skitse2}
@@ -19,7 +19,7 @@ The difference between this and the previous sketch is that now there is a list 
 
 \figur{0.9}{Skitse3.png}{Sketch of the part where the user can add items}{fig:skitse3}
 
-Figure \ref{fig:skitse3} is a look at how the packing list should look like, and what functions it should contain.
+Figure \ref{fig:skitse3} is an example of how the packing list should look like, and what functions it should contain.
 There is "Add More Items"-button and a "Start Packing"-button. This form is opening when the user presses "View Item List" in the previous form.
 
 At last the final sketch for the GUI was decided. The 3D image viewer was replaced with the list of added items in the manage items and manage suitcases, because it gave a better overview of what the user already had added to the program. This can be seen on Figure \ref{fig:skitse1done}.
@@ -31,32 +31,32 @@ These changes were made to give more usability to the program.
 
 \figur{0.9}{2skitsedone.jpg}{Updated version of the window where the user can manage items}{fig:skitse2done}
 
-Figure \ref{fig:skitse2done} is the sketch of the window that opens when the "Manage Items"-button at main form was clicked. The buttons are tools for adding, deleting or managing the items on the list while the "Save item list"-button lets the user save the list so it can be used another time and returns them to the main window.
+Figure \ref{fig:skitse2done} is the sketch of the window which opens when the "Manage Items"-button at main form is clicked. The buttons are tools for adding, deleting or managing the items on the list while the "Save item list"-button lets the user save the list so it can be used another time and returns them to the main window.
 
 \figur{0.9}{3skitsedone.jpg}{Window where the user can manage suitcases}{fig:skitse3done}
 
 The window seen on Figure \ref{fig:skitse3done} opens when the "Manage Suitcases"-button at the main form was clicked. The 3D-viewer has been replaced compared with Figure \ref{fig:skitse1} with a list of all the added suitcases. When it comes to functionality the buttons do the same as those in the "Manage Items" window just with suitcases. Clicking the "Save Suitcase List"-button will let the user save the list and will return them to the main window.
 
-\figur{0.9}{4skitsedone.jpg}{Sketch of the window that appear if the user clicks the "New packing list"-button}{fig:skitse4done}
+\figur{0.9}{4skitsedone.jpg}{Sketch of the window which appears if the user clicks the "New packing list"-button}{fig:skitse4done}
 
 When clicking the "New packing list"-button the window seen on Figure \ref{fig:skitse4done} will be shown. Here you are able to add the suitcases, you want the program to pack. On the left side in the window the program will show a 3D picture of the suitcase. The "Add items"-button will send you to the next window.
 
-\figur{0.9}{5skitsedone.jpg}{Window opened when the user adds new items}{fig:skitse5done}
+\figur{0.9}{5skitsedone.jpg}{Window opens when the user adds new items}{fig:skitse5done}
 
-Figure \ref{fig:skitse5done} shows how the user can add the items they want packed to a list. After the user have added all the items the "View list"-button will show a list with all the items and afterwards return the user to the main window.
+Figure \ref{fig:skitse5done} shows how the user can add the items he/she wants packed to a list. After the user has added all the items the "View list"-button will show a list with all the items and afterwards return the user to the main window.
 
-\figur{0.9}{6skitsedone.jpg}{Sketch of a window that shows the saved lists}{fig:skitse6done}
+\figur{0.9}{6skitsedone.jpg}{Sketch of a window which shows the saved lists}{fig:skitse6done}
 
-Figure \ref{fig:skitse6done} is the window that will be shown when the "Load saved list"-button was clicked. Here the user would be able to load a saved list and delete lists they would not want to save anymore. The "Back"-button will return them to the main window.
+Figure \ref{fig:skitse6done} is the window which will be shown when the "Load saved list"-button is clicked. Here the user would be able to load a saved list and delete lists he/she would not want to save anymore. The "Back"-button will return the user to the main window.
 
 \figur{0.9}{7askitsedone.jpg}{Sketch of the 3D-viewer of the program}{fig:skitse7adone}
 
-Figure \ref{fig:skitse7adone} is one of the suggestions on how the window showing where the items should be packed, could look like. Here the 3D-viewer show the position of every item, one item at a time. The two buttons are used to go back and forth through the items.
+Figure \ref{fig:skitse7adone} is one of the suggestions on how the window showing where the items should be packed, could look like. Here the 3D-viewer shows the position of every item, one item at a time. The two buttons are used for going back and forth through the items.
 
 \figur{0.9}{7bskitse.jpg}{Sketch of the 3D-viewer with instructions added}{fig:skitse7bdone}
 
-Figure \ref{fig:skitse7bdone} is the second suggestion on how the window should look like. Here the 3D-viewer is smaller but on the other hand has a list of instructions on the side to better help guide the user. The two buttons are used to go back and forth through the items.
+Figure \ref{fig:skitse7bdone} is the second suggestion on how the window should look like. Here the 3D-viewer is smaller but on the other hand has a list of instructions on the side to better guide the user. The two buttons are used for going back and forth through the items.
 
-\figur{0.4}{8skitse.jpg}{Sketch of the message box that will be shown when the items have been packed}{fig:skitse8}
+\figur{0.4}{8skitse.jpg}{Sketch of the message box which will be shown when the items have been packed}{fig:skitse8}
 
-The message box seen on Figure \ref{fig:skitse8} will be shown when all the items have been packed. The "Pack again"-button will show where to put all the things again. The "Make new list" will return the user to the main window where they can start making a new list, load a saved list or manage the already saved list. Most of the sketches do not look like the program what so ever, this is because the sketches where made before the program, and when the program was developed, the GUI was adapted to be more logical because of some good feed back from the tests.
+The message box seen on Figure \ref{fig:skitse8} will be shown when all the items have been packed. The "Pack again"-button will show where to put all the things again. The "Make new list" will return the user to the main window, where he/she can start making a new list, load a saved list or manage the already saved list. Most of the sketches do not look like the program what so ever, this is because the sketches where made before the program, and when the program was developed, the GUI was adapted to be more logical because of some good feed back from the tests.
