--- a/LaTeX/Rapport - NIX PILLE/indhold/testing/Tests.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/testing/Tests.tex
@@ -1,10 +1,10 @@
 \section{Choice of Survey Method}
-To test the person and see how a user would react to the program. The user tests were made where the test persons tried the program and got interviewed afterwards. For the analysis and further work regarding the test results, a qualitative method has been chosen.
+The user tests were made where the test persons tried the program and got interviewed afterwards. For the analysis and further work regarding the test results, a qualitative method has been chosen.
 
-For the interview there has been made a questionnaire (which can be seen on Appendix \ref{chap:questionnaire}), which will be used as a guideline in the interview to get useful information from the test person. The qualitative method is the best suited method for the project, because it gives a more specific picture of how the test person finds the program, and what problems the test person might come across during the test. It is also a good method to get suggestions for improvements from the user since it is normally easier to explain an idea while talking rather than writing. The problem with the interview is that the time it takes to analyze is longer than a questionnaire, where you quickly can analyze a lot of data. The questions at the interview need to be well thought and precise to get useful information from the test person, as they would also need to be on a questionnaire. Based on the test, improvements should be made to the program.
-It is important when making a questionnaire that it is structured correctly and that the questions are precisely formulated so the test person cannot misunderstand the meaning of the question. It is important because poorly formulated questions might lead to misunderstandings the meanings of the questions which can lead to wrong or useless answers. And in such case a questionnaire is  just a waste of time.
+For the interview, a questionnaire has been made (which can be seen on Appendix \ref{chap:questionnaire}), which will be used as a guideline in the interview to get useful information from the test person. The qualitative method is the best suited method for the project, because it gives a more specific picture of how the test person finds the program, and what problems the test person might come across during the test. It is also a good method to get suggestions for improvements from the user, since it is normally easier to explain an idea while talking rather than writing. The problem with the interview is that the time it takes to analyze is longer than a questionnaire, where you can analyze a lot of data quickly. The questions at the interview need to be well thought and precise to get useful information from the test persons, as they would also need to be on a questionnaire. Based on the test, improvements should be made to the program.
+It is important when making a questionnaire that it is structured correctly and that the questions are precisely formulated so the test person cannot misunderstand the meaning of the question. It is important because poorly formulated questions might lead to misunderstandings the meanings of the questions which can lead to wrong or useless answers. In such case a questionnaire is  just a waste of time.
 
-An interview based on a questionnaire after the test person has tested the program with focus on what can be improved on the program will be made.
+After the test person has tested the program, an interview based on a questionnaire, with focus on what can be improved on the program will be made.
 
 \section{The First Round of Tests}
 Two tests of the program have been made on two test persons in the first round of tests. The main idea was to see if the program had any bugs and to get some suggestions to what could be improved and if anything was missing. The test persons were first given some instructions on what they were supposed to do in the test and were afterwards asked to read the instructions in the program. The test persons were to load two lists in the program and then add some missing items after having measured each item's weight and dimensions. Afterwards they were asked to pack two suitcases. When the test persons were done packing an interview was held. Two group members were present at the testing. One was sitting and documenting everything and afterwards interviewing the test person, while the other sat behind the test person to see what mistakes the test person made.
