--- a/LaTeX/Rapport - NIX PILLE/indhold/problem/LuggageRules.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/problem/LuggageRules.tex
@@ -1,8 +1,8 @@
-\section{Luggage rules}
+\section{Luggage Rules}
 \label{sec:LugRules}
 This section will focus on the general rules regarding luggage when going abroad. This is to give a good idea about the different restrictions that can be encountered when using commercial transportation.
-\subsection{Luggage table}
-Given below is a table (see Table \ref{tab:Lug}) which displays the various limits for luggage in different transportations. The table will be used to give a general overview of the different limits for luggage for different types of transportations.
+\subsection{Luggage Table}
+Given below is a table (see Table \ref{tab:Lug}) which displays the various limits for luggage in different transportations. The table will be used to give a general overview of the different limits for luggage for different types of transportation.
 \begin{table}[H]
 \begin{center}
 \begin{tabular}{| l | r | r |}
@@ -15,7 +15,7 @@ Check-in luggage (Cruise) & 75 x 50 x 29 cm & 30 kg \\ \hline
 Hand Luggage (Cruise) & 55 x 35 x 25 cm & Within reason *\\ \hline
 \end{tabular}
 \caption{This table displays a summary of the different rules given below.\newline
-* There are no set limits, it just have to be carryable and not be a bother for other passengers\newline
+* There are no set limits, it just has to be portable and not be a bother for other passengers\newline
 Source for airline \citep{SAS}. Source for train \citep{idianrules}. Source for Cruise \citep{Cruise}.}
 \label{tab:Lug}
 \end{center}
@@ -25,7 +25,7 @@ Source for airline \citep{SAS}. Source for train \citep{idianrules}. Source for 
 Given below is the various restrictions when traveling by plane.
 
 \subsubsection{Checked-in Luggage}
-Check-in luggage is the luggage that will go in the planes cargo hold.
+Check-in luggage is the luggage which will go in the planes' cargo hold.
 \newline 
 Items not allowed:
 \begin{itemize}
@@ -39,7 +39,7 @@ Items not allowed:
 \item Corrosive compounds, including quicksilver, car batteries.
 \item Compounds from combustible systems, which have contained fuel.
 \end{itemize}
-Due to the volatile or dangerous nature of the items listed above they have been deemed unsafe and thus not allowed on the plane without explicit permission from the airline \citep{DangerousGoods}.
+Due to the volatile or dangerous nature of the items listed above, they have been deemed unsafe and thus not allowed on the plane without explicit permission from the airline \citep{DangerousGoods}.
 
 \subsubsection{Carry On}
 Carry on luggage is what the passenger is allowed to bring aboard in the cabin.
@@ -59,13 +59,13 @@ There are different rules depending on which train company you are using.
 The Danish train company, DSB, has very few rules regarding the luggage the passenger are allowed to bring with them. 
 
 
-The only rule is that the passengers luggage needs to be able to lie on the luggage rack or under the seat. The luggage must not be bothering or putting any other person on the train in danger \citep{rulestrain}.
+The only rule is that the passenger's luggage needs to be able to lie on the luggage rack or under the seat. The luggage must not be bothering other passengers or putting any other person on the train in danger \citep{rulestrain}.
 
 
-Another example could be Indian Railways where the luggage is allowed to have different weight depending on which class they are on. They have no other rules regarding luggage \citep{idianrules}.
+Another example could be Indian Railways where the luggage is allowed to have different weight depending on which class the passengers travel. They have no other rules regarding luggage \citep{idianrules}.
 
-\subsection{Rules on cruise ships}
-On board a cruise ship the "rules" are not really rules more like guidelines as they encourage the passengers to not exceed the limits. Furthermore the passengers luggage should be kept in their cabin during the trip \citep{Cruise}.
+\subsection{Rules on Cruise Ships}
+On board a cruise ship the "rules" are not really rules, more like guidelines as they encourage the passengers to not exceed the limits. Furthermore, the passenger's luggage should be kept in their cabins during the trip \citep{Cruise}.
 
-\subsection{Summing up}
-Based on the information above it can be concluded that traveling by plane is by far the strictest of the transportations described. Packing a suitcase for this type of trip posses the greatest headache for the traveler because they have to take so many factors into account, so they do not violate the rules. And as it can be seen from Table \ref{tab:airlinefees} a lot of travelers do seem to have a problem following these rules. But as it can be seen on Table \ref{tab:Lug} it can be difficult to make a general rule to follow as commercial transportation all have different rules regarding luggage.
+\subsection{Summing Up}
+Based on the information above it can be concluded that traveling by plane is by far the strictest of the transportations described. Packing a suitcase for this type of trip posses the greatest headache for the travelers, because they have to take so many factors into account, so they do not violate the rules. And as it can be seen from Table \ref{tab:airlinefees} a lot of travelers do seem to have a problem following these rules. But as it can be seen on Table \ref{tab:Lug} it can be difficult to make a general rule to follow as commercial transportation all have different rules regarding luggage.
