--- a/LaTeX/Rapport - NIX PILLE/indhold/development/FileSerializerFunction.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/development/FileSerializerFunction.tex
@@ -1,9 +1,9 @@
-\section{File Serialize function}
+\section{File Serialize Function}
 When the user shuts down the program, it should save the lists of the items and suitcases and open them next time the program is opened. There are many different ways for saving data. It can e.g. be saved in a raw binary file, a text file or a database like SQL.
-The SQL databases either needs a program that can handle SQL or an Internet connection to a server, and is therefore not used in this project. A text file is an more complex way of saving data because the program will need methods both for writing and reading the text file. The binary raw file is therefore used in the project because it is smarter than SQL and the text file.
+The SQL databases either needs a program which can handle SQL or an Internet connection to a server, and is therefore not used in this project. A text file is more complex way of saving data, because the program will need methods both for writing and reading the text file. The binary raw file is therefore used in the project because it is smarter than SQL and the text file.
 
 To save the data in the program a function called File Serialize is used. The function is called when the data from the program should be saved or loaded. The function lies in the file "FileSerializer.cs", which is taken from the website \citep{FileSeria} and modified for this project. The code parts which should be implemented in the classes to use the FileSerializer is described.
 \kode{Saves the values of the item to the variable "info" used by the FileSerializer. Code can be found in the luggage\_item class}{FileSerializer1}{FileSerializer1.txt}
 On listing \ref{lst:FileSerializer1} it can be seen that the "File Serializer" needs some data descriptions to turn the information from the item list into a data file. This is done by stating sentence, where the first part is the name of the certain information, which needs to be saved into the file. 
 \kode{Get the values to the item from the variable info from the FileSerializer. Code can be found in the luggage\_item class}{FileSerializer2}{FileSerializer2.txt}
-To open the data file the program also needs to have data description on how the data is saved in the file, see listing \ref{lst:FileSerializer2}. The program gets the information from the file, where the name of the certain information is, and puts it into the class list for each of the information that is saved.
+To open the data file the program also needs to have data description on how the data is saved in the file, see listing \ref{lst:FileSerializer2}. The program gets the information from the file, where the name of the certain information is, and puts it into the class list for each of the information which is saved.
