--- a/LaTeX/Rapport - NIX PILLE/indhold/development/HowTheProgramHandles3D.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/development/HowTheProgramHandles3D.tex
@@ -2,7 +2,7 @@
 \label{sec:3DHandler}
 The 3D in this program is handled by objects of the class Shape3D. A Shape3D object contains an array of objects of the class Polygon. A Polygon object contains an array of objects of the class Vector  and an object of the class Pen. The Pen class contains a Color and a width. A Vector object contains three integers: x, y and z, which are the coordinates of the Vector. 
 
-Instead of programming the whole 3D part ourselves, an existing solution was found and developed further. The original solution \citep{orgcode} was only a demonstration on how to draw a cube, an axis and a more advanced polygon using C\#. This solution was further developed to support drawing cubes of different sizes. Along the development, unnecessary features like drawing an axis was removed. The interface of the 3D was also improved, so that no GUI elements where created directly in the code that handled the 3D.
+Instead of programming the whole 3D part ourselves, an existing solution was found and developed further. The original solution \citep{orgcode} was only a demonstration on how to draw a cube, an axis and a more advanced polygon using C\#. This solution was further developed to support drawing cubes of different sizes. Along the development, unnecessary features such as drawing an axis was removed. The interface of the 3D was also improved, so that no GUI elements were created directly in the code which handled the 3D.
 
 \subsection{Shape3D Class}
 A Shape3D object contains four methods: Draw, Rotate, ScaleSize and RePaint.
@@ -14,11 +14,11 @@ The Rotate method in the Shape3D object is used to rotate the object. The method
 
 The ScaleSize method in the Shape3D object is almost the same as the Rotate method in Shape3D. The only difference is that instead of calling the Rotate method in the Polygon object, the ScaleSize method calls the ScaleSize method in the Polygon object.
 
-The RePaint method in the Shape3D object is used to mark one item in the suitcase(one polygon), with a thicker line than the others. In the program this is used when the user clicks on an item in the list of items to the right of the drawing of the suitcase. If the user clicks on an item in the list, the program will mark that item with thicker lines. This function is also used when the 3D viewer is opened - a small cube with dimensions 0.5 x 0.5 x 0.5 is drawn in the suitcase's [0;0;0] point, so the user knows where the [0;0;0] point is. This cube is also marked with a thicker width than the items.
+The RePaint method in the Shape3D object is used to mark one item in the suitcase(one polygon), with a thicker line than the others. In the program this is used when the user clicks on an item in the list of items to the right of the drawing of the suitcase. If the user clicks on an item in the list, the program will mark that item with thicker lines. This function is also used when the 3D viewer is opened - a small cube with dimensions of 0.5 x 0.5 x 0.5 is drawn in the [0;0;0] point of the suitcase, so the user knows where the [0;0;0] point is. This cube is also marked with a thicker width than the items.
 
 The method takes two integers as input parameters: "num" and "col\_w". The "num" input is the item that has been selected, and the "col\_w" is how wide the line must be. The method initiates a new Polygon array, newP, where all the polygons will be stored. The method also contains three counters. One that counts the elements in the polygon, this counter is called "element\_counter". Here an element consists of four sides. Another counter called "shape\_counter" is counted up when a polygon is made thicker. The last counter is counted up whether or not a polygon is made thicker. This counter is called "polygon\_counter" which keeps track of the Polygon array newP.
 
-First the method checks if the color of the current polygon is red. This only happens if the current polygon is the cube representing the 0,0,0 point. If the color is red, the width of the polygon is set to 2, and the counter "counter" is counted up. The method now checks whether or not "counter" is 4. This occurs if all four sides of a polygon is made thick. If this is the case, the counter "counter" is set to 0, and the element counter is counted up, implying that the method now should check the next element in the Shape3D object. This can be seen on Listing \ref{lst:TrollDetected}.
+First the method checks if the color of the current polygon is red. This only happens if the current polygon is the cube representing the 0,0,0 point. If the color is red, the width of the polygon is set to 2, and the counter "counter" is counted up. The method now checks whether or not "counter" is 4. This occurs if all four sides of a polygon is made thick. If this is the case, the counter "counter" is set to 0, and the element counter is counted up, implying that the method should now check the next element in the Shape3D object. This can be seen on Listing \ref{lst:TrollDetected}.
 
 \kode{Method that makes an item thicker (from Shape3D)}{TrollDetected}{makephatfunction.txt}
 
@@ -26,7 +26,7 @@ At the end the method returns a new Shape3D object, newP, which replaces the old
 
 \subsection{Polygon Class} 
 \label{sec:polygon}
-The Polygon class contains five methods: Draw, X2D, Y2D, Rotate and ScaleSize. The essential method in this class is the Draw method. This is the method that actually draws the suitcase and items on the form. The Draw method takes two input parameters; a Graphics object "g", and a Pen "MyPen". The Pen is where the color and width of the lines are stored. Before explaining how the Draw method actually works, a closer look will be taken at where it is first called.
+The Polygon class contains five methods: Draw, X2D, Y2D, Rotate and ScaleSize. The essential method in this class is the Draw method. This is the method which actually draws the suitcase and items on the form. The Draw method takes two input parameters; a Graphics object "g", and a Pen "MyPen". The Pen is where the color and width of the lines are stored. Before explaining how the Draw method actually works, a closer look will be taken on where it is first called.
 
 Every time the method 'Invalidate' is called, the Draw method in the current Shape3D object is also called. The 'Invalidate' method is called every time the program needs to refresh the drawing of the suitcase and items. For example when the user changes suitcase in the drop down element, the program needs to redraw the image, so that the items in the new suitcase are drawn instead. 
 
