--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/design/partneranalysis.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/design/partneranalysis.tex
@@ -1,5 +1,5 @@
-\section{Partner analysis}
-This section is an analysis about who and what kind of groups could use a product like the one this project is aiming to make.
+\section{Partner Analysis}
+This section is an analysis about who and what kind of groups could use a product such as the one this project is aiming to make.
 Instead of a specific target group this analysis will focus on cases in which someone might need this product.
 \begin{itemize}
 \item \textbf{People who have problems packing a suitcase properly:}\newline
